style.css
html, body {
  margin: 0;
  height: 100%;
  width: 100%;
  background: #97867d;
}

* {
  cursor: url('Precision\ Select\ G191.cur'), auto; /* ccursors: https://www.rw-designer.com/cursor-set/guest-191-s-hands*/
  }

/* wrapper becomes the viewport container */
.wrapper {
  position: relative;
  width: 100vw;
  height: 100vh;

  overflow: hidden;

  container-type: size;
}

.wrapper::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  z-index: 999;
  opacity: 0.17;
  background-image: url('noise.png'); /* watercolor paper texture*/
  background-size: 200px 200px;
  background-repeat: repeat;
  mix-blend-mode: overlay;
}

a, button, .cardicon {
  cursor: url('Normal\ Select\ G191.cur'), pointer;
}

p, h1, h2, h3, .content {
  cursor: url('Text\ Select\ G191.cur'), text;
}

/* right grid paper region */
.material {
  position: absolute;
  top: 0;
  right: 0;

  width: 58%;
  height: 100%;

  background-image: url("gridpapercropped.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;

  z-index: 0;
}

.content {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding-left: 7.5cqw;
  padding-top: 4cqw;
  padding-right: 2.6cqw;
  font-size: 1.5cqw;
  line-height: 96%;
  overflow-y: auto;
  font-family: 'JetBrains Mono', monospace;
  font-weight: 410;
  color: #4a4440;
  z-index: 2;
  filter: blur(0.2 px) drop-shadow(0px 0px 3.6px rgba(0,0,0,0.2));
}

.content img {
  float: right;
  margin-left: 2cqw;
  margin: 1cqw auto;
  width: 26cqh;
  opacity: 1;
  border: 5px solid rgba(33, 33, 33, 0.88);
  filter: drop-shadow(4px 0px 23px rgba(0,0,0,0.5))
    drop-shadow(0px 0px 35px rgba(0,0,0,0.15));
}

.content .grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1cqw;
}

.content .grid img {
  width: 100%;
}

.content .grid em {
  display: block;
  text-align: center;
  font-size: 1.2cqw;
}

/*
.leftbgblur {
  position: absolute;
  top: 0;
  left: 0;
  width: 44%;
  height: 100%;
  opacity: 1;
  object-fit: fill;
  pointer-events: none;
  z-index: 3;
  filter: drop-shadow(20px 0px 50px rgba(0,0,0,1));
}*/

.top {
  top:  -3.5px;
  left: 0;
  position: absolute;
  background: linear-gradient(to bottom, rgba(0,0,0,0.08) 0%, transparent 100%);
  width: 100%;
  height: 3cqh;
  pointer-events: none;
  z-index: 4;
  mix-blend-mode: multiply;
}

/*
.topframe {
  position: absolute;
  top: -1%;
  left: 0;
  width: 100%;
  height: 40%;
  opacity: 1;
  object-fit: fill;
  pointer-events: none;
  z-index: 5;
}*/

.frame {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 56%;
  z-index: 10;
  pointer-events: none;
  filter: drop-shadow(7px -2px 5px rgba(0,0,0,0.3));
}

.leftbg {
  position: relative;
  top: 0; /* start just below card */
  left: 0;
  width: 44.1%; /* extend to card edge */
  height: 100%;
  background-image: url("leftbg.png");
  background-size: 100% 100%;
  background-position: right center;
  z-index: 5;
  filter: drop-shadow(5px 0px 23px rgba(0,0,0,0.3)); /* chefs kiss drop shadow*/
}

.leftbg img {
  position: absolute; 
  bottom: 0;
  left: 0;
  width: 94.7%;
  object-fit: cover;
  mix-blend-mode: multiply;
}

/* link card anchor */
.links {
  position: absolute;

  top: 7.5cqh;
  left: 3.5cqw;

  z-index: 10;
}

/* notebook card */
.card {
  position: relative;
  width: 43.4cqw;
  container-type: inline-size;
  background-image: url("linedpapergraffiti.png");
  background-size: cover;
  background-repeat: no-repeat;

  display: flex;
  flex-direction: column;

  filter: drop-shadow(4px 4px 7px rgba(0,0,0,0.45));
}

.cardicon {
  position: absolute;
  top: 0.4cqw;
  left: 8cqw;
  width: 19cqw;
  opacity: 0.94;
  filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.25));
  pointer-events: visibleFill;
  z-index: 5;
}

.cardicon2 {
  position: absolute;
  bottom: -7cqw;
  rotate: -40deg;
  right: 4cqw;
  width: 19cqw;
  opacity: 0.94;
  filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.25));
}

/* link container */
.card-links {
  display: flex;
  flex-direction: column;
  gap: 0cqw; /* FUCK GAP THIS WAS THE ISSUE ALL ALONG*/
  margin-top: 13cqw; /* 13.8 should be multiple of line heigh cqw, set this to 0 and then change line heights till you get something on every line then push everything down*/
  margin-left: 11.2cqw;
  margin-bottom: 3.65cqw;
}

/* links */
.card a {
  text-decoration: none;
  color: #2d2d2d;

  font-family: Baskerville, serif;
  font-weight: 370;

  font-size: 4.3cqw; /* WAIT EUREKA, THE SOLUTION TO THE ISSUE WHERE THE RESIZING OF WINDOW WOULD MESS EVERYTHING UP. The isseu would be that the window height would change the line height and since the card is tied to the lines of text, it will also expand but it is cropped not scaled so it will not scale up it will just add more lines adn teh lines of text will be bigger but not the same spacing as the image so thats where teh drift occurs. However if we can restrict the spacing to the width of the paper (thats teh part that changes) then we can make this thing work.
  */
  /* okay that was part of the solution. IT WAS FUCKASS GAP IN CARD LINKS ALL ALONG THAT WAS ADDING EXTRA SHIT AND IT WAS TIED TO qcH FUCKK*/
  opacity: 0.85;

  line-height: 1.068;

  letter-spacing: -0.045em;
  filter: blur(0.36px) drop-shadow(0px 0px 2.4px rgba(0,0,0,0.22));
}

